# programming-basics-course

./: CMakeLists.txt
C/base/module_01_intro/: theory.md
C/base/tests/: module_01_test.txt
C/base/tests/test_runner/: main.c  test_loader.c  test_loader.h
cmake/: cmake_practice_assignment.md  cmake_theory.md
git_and_github/: git_clone_guide.md  git_practice_assignment.md  theory.md
practices/02.10.25_practic/: task.md
practices/06.11.25_practic/: abs_sort_no_arrays.c  task.md
practices/09.10.25_practic/: task.md  vector_operations.c
practices/11.12.25_practic/: solution.c  task.md
practices/16.10.25_practic/: horner_deep_dive.md  main.c  polynomial_derivative.c  task.md
practices/20.11.25_practic/: index_sorting.c  task.md
practices/23.10.25_practic/: task.md
practices/25.09.25_practic/: task.md
practices/practic_02.10.25/: quadratic_equation.c
practices/practic_23.10.25/: middle_normal.c  task.md
practices/practic_25.09.25/: linear.c
