cmake_minimum_required(VERSION 4.0)
project(programming_basics_course C)

set(CMAKE_C_STANDARD 11)

add_executable(linear
        practices/25.09.25_practic/linear.c)

add_executable(quadratic_equation
        practices/02.10.25_practic/quadratic_equation.c)

add_executable(programming_basics_course
        practices/16.10.25_practic/main.c)

add_executable(middle_normal
        practices/23.10.25_practic/middle_normal.c)